[tool.poetry]
name = "async python examples"
version = "0.1.0"
description = "examples on how to write coroutines in python using asynchronous functions"
authors = ["Tobias McVey"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.1"
aiofiles = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
